# mydia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.base-builder  Dockerfile.base-dev  Dockerfile.dev  Dockerfile.e2e  README.md  SUBSCRIPTIONS_IMPLEMENTATION.md  compose.override.yml.example  compose.player-e2e.yml  compose.test.yml  compose.windows.yml  compose.yml  dev  docker-entrypoint-prod.sh  docker-entrypoint.sh  flake.nix  mix.exs  mkdocs.yml  schema.json  take-screenshots  test_metadata_matching.exs
.claude/commands/: release.md  work.md
.github/workflows/: base-images.yml  build_windows.yml  ci-docker.yml  ci-player-e2e.yml  ci-player.yml  ci-relay.yml  ci.yml  deploy-docs.yml  docker.yml  docs.yml  e2e.yml  flutter-player-release.yml  maintenance-stale.yml  metadata-relay-ci.yml  metadata-relay-release.yml  player-build.yml  player-e2e.yml  player-release.yml  relay-ci.yml  relay-release.yml  release-relay.yml  release.yml  stale.yml  test.yml
assets/: package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
assets/css/: app.css
assets/js/: app.js
backlog/tasks/: task-114 - Implement-TRaSH-Guides-alignment-improvements.md  task-114.1 - Implement-hardlink-support-for-efficient-media-imports.md  task-114.2 - Implement-TRaSH-compatible-file-naming-on-import.md  task-114.3 - Add-REMUX-quality-tier-support.md  task-114.4 - Implement-Custom-Formats-system-with-weighted-scoring.md  task-114.5 - Enhance-upgrade-logic-with-custom-format-scoring.md  task-114.6 - Add-additional-TRaSH-aligned-improvements-(edition-tags,-bit-depth,-audio-channels).md  task-114.8 - Fix-remaining-test-failures.md  task-119.6 - Implement-first-OIDC-user-auto-promotion-to-admin.md  task-133 - Fix-broken-role-based-authorization-and-role-display.md  task-133.1 - Enforce-authorization-checks-for-privileged-media-operations.md  task-133.2 - Update-UI-to-redirect-guests-to-request-flow-instead-of-direct-media-addition.md  task-20 - Fix-test-infrastructure-Oban-SQL-Sandbox-configuration.md  task-21.1 - Create-download-client-adapter-abstraction-layer.md  task-23.6 - Implement-metadata-matching-and-enrichment-engine.md  task-23.9 - Add-comprehensive-environment-variable-and-YAML-configuration-for-library-paths.md  task-25 - Build-admin-configuration-management-and-system-observability-UI.md  task-25.5 - Create-REST-API-endpoints-for-configuration-management.md  task-25.6 - Display-real-Oban-statistics-in-admin-status-dashboard.md  task-35 - Configure-local-development-services-in-compose.override.yml-environment-variables.md  task-36 - Improve-card-background-contrast-by-making-backgrounds-brighter.md  task-5 - Implement-OIDC-authentication-with-Ueberauth.md  task-7.1.1 - Streamline-Add-Movie-Series-workflow-with-compact-layout-and-smart-defaults.md  task-94 - Fix-disambiguation-modal-showing-empty-results-when-metadata-matches-are-found.md  task-95 - Improve-torrent-name-parser-to-handle-season-packs-and-edge-cases.md  task-96 - Add-support-for-custom-library-types-beyond-movies-series-mixed.md  task-97 - Make-auto-search-&-download-enabled-by-default-for-new-library-items.md
clients/player/: CICD_FLUTTER_SETUP.md  CLAUDE.md  DEV_WORKFLOW.md  GITHUB_SECRETS_REFERENCE.md  HLS_WEB_IMPLEMENTATION.md  PLATFORM_SETUP_GUIDE.md  QUICK_START_CICD.md  README.md  SEEK_PREVIEW_IMPLEMENTATION.md  SETUP_NOTES.md  TASK_5.3_COMPLETION_REPORT.md  build.yaml  pubspec.yaml
config/: config.example.yml  config.exs  dev.exs  runtime.exs  test.exs
docs/: OIDC_TESTING.md
docs/advanced/: deployment.md
docs/development/: architecture.md
docs/getting-started/: quick-start.md
docs/reference/: environment-variables.md  remote-access.md
docs/user-guide/: adding-media.md  download-clients.md  indexers.md  users.md
infra/: .gitignore  README.md  config.yaml.example  deploy  ovh.conf.example
lib/: mydia_web.ex
lib/mydia/: accounts.ex  adult.ex  application.ex  books.ex  collections.ex  db.ex  downloads.ex  events.ex  import_lists.ex  indexers.ex  libp2p.ex  library.ex  logger.ex  media.ex  metadata.ex  music.ex  p2p.ex  playback.ex  release.ex  remote_access.ex  search.ex  settings.ex  streaming.ex  subtitles.ex  system.ex
lib/mydia_web/: endpoint.ex  flutter_watcher.ex  router.ex  schema.ex
metadata-relay/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  docker-entrypoint.sh  mix.exs
metadata-relay/config/: config.exs  dev.exs  runtime.exs  test.exs
metadata-relay/docs/: SECURITY.md
mkdocs-docs/: index.md  pyproject.toml  requirements.txt
native/mydia_libp2p/: Cargo.toml  README.md
native/mydia_libp2p/src/: lib.rs
native/mydia_p2p/: Cargo.toml  README.md
native/mydia_p2p/src/: lib.rs
native/mydia_p2p_core/: Cargo.toml
native/mydia_p2p_core/src/: lib.rs
native/mydia_p2p_e2e/: Cargo.toml  Dockerfile
native/mydia_p2p_e2e/src/: main.rs
native/mydia_p2p_e2e/tests/: e2e.rs
player/: .dockerignore  .flutter-plugins-dependencies  .gitignore  .metadata  CLAUDE.md  Dockerfile.android  Dockerfile.dev  Dockerfile.e2e  Dockerfile.test  analysis_options.yaml  flake.nix  flutter_rust_bridge.yaml  pubspec.yaml
player/rust/mydia_player_p2p/: Cargo.toml
player/rust/mydia_player_p2p/src/: frb_generated.rs  lib.rs
scripts/: build-flutter-web.sh  generate_pwa_icons.js  manage-admin.sh  mydia-cli.sh
test/: test_helper.exs
(+973 files in other folders)
