[package]
name = "mydia_p2p"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "mydia_p2p"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34.0"
mydia_p2p_core = { path = "../mydia_p2p_core" }
tokio = { version = "1.43", features = ["rt-multi-thread", "sync"] }
iroh-blobs = "0.35"
iroh = "0.95"
anyhow = "1.0"
tempfile = "3.0"
serde_json = "1.0"
blake3 = "1.5"
