[package]
name = "mydia_p2p_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Iroh for p2p networking (QUIC-based, simpler than libp2p)
iroh = "0.95"

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "sync", "macros", "time", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"

# Random number generation
rand = "0.9"

# Utilities
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
