[package]
name = "mydia_p2p_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Iroh for p2p networking (QUIC-based, simpler than libp2p)
iroh = "0.96"
iroh-relay = "0.96"

# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "macros", "time", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"

# Random number generation
rand = "0.9"

# Logging - using tracing to capture iroh's internal logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
uuid = { version = "1.20", features = ["v4"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
