[package]
name = "mydia_player_p2p"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
mydia_p2p_core = { path = "../../../native/mydia_p2p_core" }
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
tracing-android = "0.2"
